@@ -351,6 +351,7 @@ enum
 #define SYSTEM_CALL_CONDITION_DESTROY         0x0062
 #define SYSTEM_CALL_CONDITION_NOTIFY_ALL      0x0063
 #define SYSTEM_CALL_CONDITION_WAIT            0x0064
+#define SYSTEM_CALL_COND_WAIT_TIMEOUT         0x0065
 enum
 {
     DEBUG_BREAK_ONLY_ON_EXECUTE    = 0,
